--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Indecision App</title>
+        <title>Build It!</title>
     </head>
     <body>
         <div id="app"> </div>
         <script src="https://unpkg.com/react@16.0.0/umd/react.development.js"></script>
         <script src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.development.js"></script>
-        <script src="/scripts/app.js"></script>
-        <!--<script src="/scripts/playground/scrap.js"></script>-->
+        <!--<script src="/scripts/app.js"></script>-->
+        <script src="/scripts/playground/scrap.js"></script>
     </body>
 </html>
