Use @media to conditionally style for large / small screens

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <!--The viewport is for scaling to fit device e.g. mobile phone-->
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Build It!</title>
     </head>
     <body>
