--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <!--The viewport is for scaling to fit device e.g. mobile phone-->
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" type="image/png" href="/images/favicon.png"/>
         <title>Build It!</title>
     </head>
     <body>
